--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "next": "9.2.1",
+    "next-offline": "^4.0.6",
     "react": "16.12.0",
     "react-dom": "16.12.0"
   }
