--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon -r esm ssr-server.mjs",
+    "dev": "nodemon -r esm server/index.mjs",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "seed": "node -r esm script/seed.mjs"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "faker": "^4.1.0",
+    "morgan": "^1.9.1",
+    "neo4j-driver": "^4.0.1",
     "next": "9.2.1",
     "next-offline": "^4.0.6",
+    "node-neo4j": "^2.0.3",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "react": "^16.12.0",
     "react-dom": "16.12.0"
   }
