--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "seed": "node -r esm script/seed.mjs"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
