--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "react": "^16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   }
 }
