--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "seed": "node -r esm script/seed.mjs"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
@@ -26,10 +28,13 @@
     "react": "^16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "^7.1.3",
+    "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
     "sessionstore": "^1.3.7"
   }
 }
