--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "node-neo4j": "^2.0.3",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
+    "pg": "^7.18.1",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "^7.1.3",
@@ -35,6 +37,7 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
+    "sequelize": "^5.21.3",
     "sessionstore": "^1.3.7"
   }
 }
