--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon -r esm server/index.mjs",
     "build": "next build",
     "start": "next start",
-    "seed": "node -r esm script/seed.mjs"
+    "seed": "node esm script/seed.mjs"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
@@ -22,10 +22,8 @@
     "next": "9.2.1",
     "next-offline": "^4.0.6",
     "next-redux-wrapper": "^4.0.1",
-    "node-neo4j": "^2.0.3",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
-    "pg": "^7.18.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "16.12.0",
@@ -37,7 +35,6 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "sequelize": "^5.21.3",
     "sessionstore": "^1.3.7"
   }
 }
