--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "sessionstore": "^1.3.7"
+  },
+  "devDependencies": {
+    "prettier": "^1.19.1"
   }
 }
