--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
-    "chartjs": "^0.3.24",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "faker": "^4.1.0",
+    "leaflet": "^1.6.0",
     "morgan": "^1.9.1",
     "neo4j-driver": "^4.0.1",
     "next": "9.2.1",
@@ -32,6 +32,9 @@
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "16.12.0",
+    "react-leaflet": "^2.6.1",
+    "react-leaflet-universal": "^2.1.0",
+    "react-map-gl": "^5.2.2",
     "react-redux": "^7.1.3",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
