--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "16.12.0",
+    "react-map-gl": "^5.2.2",
     "react-redux": "^7.1.3",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
