--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "neo4j-driver": "^4.0.1",
     "next": "9.2.1",
