--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport-google-oauth": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-alice-carousel": "^1.17.3",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "16.12.0",
     "react-map-gl": "^5.2.2",
